# WebContextTool

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  main.rs  scanner.rs
src/commands/: generate.rs  mod.rs  registry.rs  show.rs  update.rs
